--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Meetup Event Winner</title>
+    <title>Meetup Door Prize</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
     <script src="scripts/jquery.url.js" type="text/javascript"></script>
     <script src="scripts/jquery.dateFormat-1.0.js" type="text/javascript"></script>
@@ -10,7 +10,7 @@
 </head>
     <body>
         <div>
-            <h1>Meetup Event Winner</h1>
+            <h1>Meetup Door Prize</h1>
         </div>
         <div>
             <label for="eventUrl">Event URL:</label>
@@ -18,14 +18,14 @@
             <input type="button" value="Find" onclick="getEventDetails(eventUrl.value);"/>
         </div>
         <div id="main" style="display:none">
-            <ul data-role="listview" id="list" data-filter="false" data-inset="false">
+            <ul data-role="listview" id="list" data-inset="false">
             </ul>
             <p>
                 <input type="button" id="chooseWinner" value="Choose Winner" onclick="chooseWinnerId($.url(eventUrl.value).segment(2));"/>
             </p>
         </div>
-        <div>
-            <!--choose winners from rsvp's-->
+        <div id="winnerInfo">
+            <!--random winner from 'yes' rsvp's-->
         </div>
     </body>
 </html>
