--- a/index.html
+++ b/index.html
@@ -2,30 +2,83 @@
 <html>
 <head>
     <title>Meetup Door Prize</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="//current.bootstrapcdn.com/bootstrap-v204/css/bootstrap-combined.min.css"
+        rel="stylesheet" />
+    <style type="text/css">
+        body
+        {
+            padding-top: 60px;
+            padding-bottom: 40px;
+        }
+    </style>
+</head>
+<body>
+    <div class="navbar navbar-fixed-top">
+        <div class="navbar-inner">
+            <div class="container">
+                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"><span
+                    class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+                </a><a class="brand" href="#">Meetup Door Prize</a>
+                <div class="nav-collapse">
+                    <ul class="nav">
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="https://twitter.com/JustinSaraceno">Contact</a></li>
+                    </ul>
+                </div>
+                <!--/.nav-collapse -->
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <!-- Main hero unit for a primary marketing message or call to action -->
+        <div class="hero-unit">
+            <h1>
+                Door Prize!</h1>
+            <p>
+                Do you have a Meetup.com group that gives out door prizes? Are you tired of handing
+                out raffle tickets, throwing darts at the attendance sheet, or arm wrestling for
+                your door prizes? This is the better way to pick the winners.</p>
+            <p>
+                <a href="https://github.com/justinsaraceno/meetup-door-prize" class="btn btn-primary btn-large">
+                    Fork on GitHub! &raquo;</a></p>
+        </div>
+        <!-- Example row of columns -->
+        <div class="row">
+            <div class="span12">
+                <h2>
+                    Enter the direct Meetup.com URL of your event:</h2>
+                <form class="well form-search">
+                    <input type="url" id="eventUrl" value="http://meetup.trinug.org/events/68940942"
+                           class="span5" />
+                    <a class="btn" href="#" onclick="getEventDetails(eventUrl.value);"><i class="icon-search">
+                                                                                       </i>Find event &raquo;</a>
+                </form>
+                <div id="main" style="display: none">
+                    <ul data-role="listview" id="list" data-inset="false">
+                    </ul>
+                    <p>
+                        <a class="btn" href="#" id="chooseWinner" onclick="chooseWinnerId($.url(eventUrl.value).segment(2));">
+                            <i class="icon-user"></i>Choose Winner</a>
+                    </p>
+                </div>
+                <div id="winnerInfo" class="alert alert-success" style="display: none">
+                    <!--random winner from 'yes' rsvp's-->
+                </div>
+            </div>
+        </div>
+        <hr>
+        <footer>
+            <p>&copy; Justin Saraceno 2012</p>
+        </footer>
+    </div>
+    <!-- /container -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
     <script src="scripts/jquery.url.js" type="text/javascript"></script>
     <script src="scripts/jquery.dateFormat-1.0.js" type="text/javascript"></script>
     <script src="scripts/meetup.event.data.js" type="text/javascript"></script>
     <script src="scripts/private.keys.js" type="text/javascript"></script>
-</head>
-    <body>
-        <div>
-            <h1>Meetup Door Prize</h1>
-        </div>
-        <div>
-            <label for="eventUrl">Event URL:</label>
-            <input type="url" id="eventUrl" value="http://meetup.trinug.org/events/68940942" style="width: 300px;" />
-            <input type="button" value="Find" onclick="getEventDetails(eventUrl.value);"/>
-        </div>
-        <div id="main" style="display:none">
-            <ul data-role="listview" id="list" data-inset="false">
-            </ul>
-            <p>
-                <input type="button" id="chooseWinner" value="Choose Winner" onclick="chooseWinnerId($.url(eventUrl.value).segment(2));"/>
-            </p>
-        </div>
-        <div id="winnerInfo">
-            <!--random winner from 'yes' rsvp's-->
-        </div>
-    </body>
+    <script src="http//current.bootstrapcdn.com/bootstrap-v204/js/bootstrap.min.js" type="text/javascript"></script>
+</body>
 </html>
