additional formatting of winner data

--- a/index.html
+++ b/index.html
@@ -68,9 +68,13 @@
                     </p>
                     <div id="winnerInfo" style="display: none">
                     <!--random winner from 'yes' rsvp's-->
-                </div>
+                    </div>
                 </div>
                 
+                <div class="row-fluid" id="winnerInfo2" style="position:relative;">
+                  
+                </div>
+
             </div>
         </div>
         <hr>
