--- a/index.html
+++ b/index.html
@@ -84,49 +84,49 @@
     </div>
     <!-- /container -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
+    <script src="scripts/mu.api.js" type="text/javascript"></script>
     <script src="scripts/jquery.url.js" type="text/javascript"></script>
     <script src="scripts/jquery.dateFormat-1.0.js" type="text/javascript"></script>
     <script src="scripts/meetup.event.data.js" type="text/javascript"></script>
     <script src="scripts/private.keys.js" type="text/javascript"></script>
     <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.0/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="scripts/mu.api.js" type="text/javascript"></script>
     <script type="text/javascript">
-        // initialize api
-        api = mu.Api({
-            clientId: "jd6cpjbd8v063nkgn52dpst4g1"
-          , onMember: function (member, token) {
-              //$("#connect").hide();
-              $("#disconnect").show();
-              $.getJSON("https://api.meetup.com/2/events?access_token=" + token +
-                        "&member_id=self&fields=short_link&page=10&callback=?", function (evts) {
-                            var el = $("#events"), buff = [];
-                            $.map(evts.results, function (e) {
-                                buff.push('<li>' + e.name.link(e.short_link) + '</li>');
-                            });
-                            el.append(buff.join(''));
-                        });
-              $("#connect").html(
-                  "<a href='#' id='disconnect'>Logout " + member.name + "</a>");
-          }
-        });
+        //// initialize api
+        //api = mu.Api({
+        //    clientId: "jd6cpjbd8v063nkgn52dpst4g1"
+        //  , onMember: function (member, token) {
+        //      //$("#connect").hide();
+        //      $("#disconnect").show();
+        //      $.getJSON("https://api.meetup.com/2/events?access_token=" + token +
+        //                "&member_id=self&fields=short_link&page=10&callback=?", function (evts) {
+        //                    var el = $("#events"), buff = [];
+        //                    $.map(evts.results, function (e) {
+        //                        buff.push('<li>' + e.name.link(e.short_link) + '</li>');
+        //                    });
+        //                    el.append(buff.join(''));
+        //                });
+        //      $("#connect").html(
+        //          "<a href='#' id='disconnect'>Logout " + member.name + "</a>");
+        //  }
+        //});
 
-        (function ($) {
-            $(function () {
-                $("#connect").live('click', function (e) {
-                    e.preventDefault();
-                    api.login();
-                    return false;
-                });
-                $("#disconnect").live('click', function (e) {
-                    e.preventDefault();
-                    api.logout(function () {
-                        $("#disconnect").hide(); $("#connect").show();
-                        window.location.reload();
-                    });
-                    return false;
-                });
-            });
-        })(jQuery);
+        //(function ($) {
+        //    $(function () {
+        //        $("#connect").live('click', function (e) {
+        //            e.preventDefault();
+        //            api.login();
+        //            return false;
+        //        });
+        //        $("#disconnect").live('click', function (e) {
+        //            e.preventDefault();
+        //            api.logout(function () {
+        //                $("#disconnect").hide(); $("#connect").show();
+        //                window.location.reload();
+        //            });
+        //            return false;
+        //        });
+        //    });
+        //})(jQuery);
     </script>
 </body>
 </html>
