--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <title>Meetup Door Prize</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.0/css/bootstrap-combined.min.css"
-        rel="stylesheet" />
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/bootswatch/2.1.1/superhero/bootstrap.min.css" rel="stylesheet">
     <style type="text/css">
         body
         {
@@ -37,12 +37,14 @@
     <div class="container">
         <!-- Main hero unit for a primary marketing message or call to action -->
         <div class="hero-unit">
-            <h1>
-                Door Prize!</h1>
-            <p>
-                Do you have a Meetup.com group that gives out door prizes? Are you tired of handing
-                out raffle tickets, throwing darts at the attendance sheet, or arm wrestling for
-                your door prizes? This is the better way to pick the winners.</p>
+            <div class="row">
+                <div class="span3"><img src="images/meetup-door-prize.gif" ></div>
+                <div class="span7">
+                    Do you have a Meetup.com group that gives out door prizes? Are you tired of handing
+                    out raffle tickets, throwing darts at the attendance sheet, or arm wrestling for
+                    your door prizes? This is the better way to pick the winners.
+                </div>
+            </div>
         </div>
         <!-- Example row of columns -->
         <div class="row">
@@ -79,16 +81,16 @@
         </div>
         <hr>
         <footer>
-            <p>&copy; Justin Saraceno 2012</p>
+            <p>&copy; Justin Saraceno 2013</p>
         </footer>
     </div>
     <!-- /container -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="scripts/jquery.url.js" type="text/javascript"></script>
     <script src="scripts/jquery.dateFormat-1.0.js" type="text/javascript"></script>
     <script src="scripts/meetup.event.data.js" type="text/javascript"></script>
     <script src="scripts/private.keys.js" type="text/javascript"></script>
-    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.0/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
     <script src="scripts/mu.api.js" type="text/javascript"></script>
     <script type="text/javascript">
         // initialize api
