--- a/index-new.html
+++ b/index-new.html
@@ -5,31 +5,37 @@
     <title>Meetup Door Prize</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/bootswatch/2.3.1/slate/bootstrap.min.css" rel="stylesheet">
     <link href="content/Site.css" rel="stylesheet" />
-      
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css" rel="stylesheet">
   </head>
   
   <body>
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
-        <div class="container">
-          <a class="brand" href="#">Meetup Door Prize</a>
-          <div class="navbar-content">
-            <ul class="nav  pull-right">
-                <li id="login">
-                    <a id="connect" href="#">Connect with Meetup</a>
-                </li>
-                <li id="member"> 
-                </li>
-            </ul>
+          <div class="container">
+              <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
+              <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </a>
+              <a class="brand" href="#">Meetup Door Prize</a>
+              <!-- Everything you want hidden at 940px or less, place within here -->
+              <div class="nav-collapse collapse">
+                  <ul class="nav  pull-right">
+                      <li id="login">
+                          <a class="connect" href="#">Connect with Meetup</a>
+                      </li>
+                      <li id="member"> 
+                      </li>
+                  </ul>
+              </div>
           </div>
-        </div>
       </div>
     </div>
     <div class="container-fluid">
-        <div class="page-header">
+        <div class="page-header hidden-phone">
             <div class="container" id="header-logo">
                 <img src="images/meetup-door-prize-logo.gif"> 
             </div>
@@ -44,7 +50,7 @@
         <div id="loggedout">
             <div class="container">
                 <div class="hero-unit">
-                    <p>Get started:  <a href="#" class="btn btn-link btn-mini">Connect With Meetup</a></p>
+                    <p>Get started:  <a href="#" class="connect btn btn-link btn-mini">Connect With Meetup</a></p>
                 </div>
             </div>
         </div>
@@ -95,7 +101,7 @@
           api = mu.Api({
               clientId: "jd6cpjbd8v063nkgn52dpst4g1"
             , onMember: function (member, token) {
-                $("#connect").hide(); $("#disconnect").show();
+                $(".connect").hide(); $("#disconnect").show();
                 $("#loggedout").hide(); $("#loggedin").removeClass("hidden");
                 $.getJSON("https://api.meetup.com/2/events?access_token=" + token +
                           "&member_id=self&page=10&callback=?", function (evts) {
@@ -112,7 +118,7 @@
 
           (function ($) {
               $(function () {
-                  $("#connect").on('click', function (e) {
+                  $(".connect").on('click', function (e) {
                       e.preventDefault();
                       console.log('in login');
                       api.login();
