--- a/index-new.html
+++ b/index-new.html
@@ -87,8 +87,7 @@
               <ul id="events"></ul>
           </div>
           <div class="modal-footer">
-              <button class="btn" data-dismiss="modal" aria-hidden="true" style="">Cancel</button>
-              <button class="btn btn-primary">Save changes</button>
+              <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
           </div>
       </div>
       
@@ -107,7 +106,7 @@
                           "&member_id=self&page=10&callback=?", function (evts) {
                               var el = $("#events"), buff = [];
                               $.map(evts.results, function (e) {
-                                  buff.push('<li>' + e.name.link('#') + '</li>');
+                                  buff.push('<li class="eventid" value=' + e.id + '>' + e.name.link('#') + '</li>');
                               });
                               el.append(buff.join(''));
                           });
