--- a/index-new.html
+++ b/index-new.html
@@ -96,5 +96,6 @@
       <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
       <script src="scripts/mu.api.js" type="text/javascript"></script>
       <script src="scripts/index.js" type="text/javascript"></script>
+      <script src="scripts/analytics.js"></script>
   </body>
 </html>
